# youbot-manipulation

./: .gitignore  README.md  stack.xml
arm_kinematics_constraint_aware/: CMakeLists.txt  kinematics_plugins.xml  mainpage.dox  manifest.xml
arm_kinematics_constraint_aware/config/: kdl_pr2_arm_kinematics.yaml  pr2_arm_kinematics.yaml
arm_kinematics_constraint_aware/include/arm_kinematics_constraint_aware/: arm_kinematics_constraint_aware.h  arm_kinematics_constraint_aware_utils.h  kdl_arm_kinematics_plugin.h
arm_kinematics_constraint_aware/launch/: kdl_arm_kinematics.launch  pr2_arm_kinematics.launch
arm_kinematics_constraint_aware/src/: arm_kinematics_constraint_aware.cpp  arm_kinematics_constraint_aware_utils.cpp  kdl_arm_kinematics_plugin.cpp  main.cpp
interpolated_ik_motion_planner/: .gitignore  CMakeLists.txt  mainpage.dox
interpolated_ik_motion_planner/scripts/: interpolated_ik_motion_planner.py
interpolated_ik_motion_planner/src/interpolated_ik_motion_planner/: ik_utilities.py
interpolated_ik_motion_planner/test/: test_interpolated_ik_motion_planner.py
youbot_arm_kinematics/: CMakeLists.txt  kinematics_plugins.xml  mainpage.dox  manifest.xml  package.xml
youbot_arm_kinematics/common/include/youbot_arm_kinematics/: inverse_kinematics.h  logger.h
youbot_arm_kinematics/common/src/: arm_analytical_inverse_kinematics.cpp  inverse_kinematics.cpp  logger.cpp
youbot_arm_kinematics/ros/include/youbot_arm_kinematics/: arm_analytical_inverse_kinematics.h  arm_kdl_forward_kinematics.h  arm_kdl_inverse_kinematics.h  forward_kinematics.h  inverse_kinematics.h  inverse_kinematics_solver.h  solver_info_processor.h  youbot_arm_kinematics_plugin.h
youbot_arm_kinematics/ros/scripts/: constraint_aware_ik_solver_test.py  move_arm_cart_test.py
youbot_arm_kinematics/ros/src/: arm_analytical_inverse_kinematics.cpp  arm_kdl_forward_kinematics.cpp  arm_kdl_inverse_kinematics.cpp  inverse_kinematics_solver.cpp  solver_info_processor.cpp  youbot_arm_kinematics_plugin.cpp
youbot_arm_kinematics_moveit/: CMakeLists.txt  package.xml  plugins.xml
youbot_arm_kinematics_moveit/ros/include/youbot_arm_kinematics_moveit/: configuration_comparator.h  configuration_comparator.inl  kinematics_logger.h  youbot_arm_kinematics_moveit.h
youbot_arm_kinematics_moveit/ros/src/: kinematics_logger.cpp  youbot_arm_kinematics_moveit.cpp
youbot_arm_kinematics_moveit/ros/test/: configuration_comparator_test.cpp  load_moveit_plugin_test.cpp  moveit_plugin.test  youbot_arm.urdf  youbot_arm_kinematics_moveit_test.cpp
youbot_arm_navigation/: manifest.xml
youbot_arm_navigation/ros/config/: arm_kinematics.yaml  chomp_config.yaml  collision_checks.yaml  collision_map_sources.yaml  filter_unnormalize.yaml  multi_dof_joints.yaml  ompl_planning.yaml  planning_groups.yaml  robot_padding.yaml  self_filter.yaml
youbot_arm_navigation/ros/launch/: arm_navigation.launch  chomp_planning.launch  collision_proximity.launch  collision_proximity_planning.launch  constraint_aware_kinematics.launch  environment_server.launch  interpolated_ik_motion_planning.launch  kinect_perception.launch  move_arm.launch  ompl_planning.launch  planning_components_visualizer.launch  planning_environment.launch  planning_scene_warehouse_viewer.launch  trajectory_filter.launch  trajectory_filter_server.launch
youbot_gripper/: CMakeLists.txt  package.xml
youbot_gripper/scripts/: youbot_gripper_server.py
youbot_joint_trajectory_action/: mainpage.dox  manifest.xml
youbot_joint_trajectory_action/ros/config/: arm_joint_trajectory_action.yaml  gripper_joint_trajectory_action.yaml
youbot_joint_trajectory_action/ros/launch/: upload_joint_trajectory_action.launch  (+1 more)
youbot_manipulation/: CMakeLists.txt  package.xml
youbot_manipulation_examples/: mainpage.dox  manifest.xml
youbot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
youbot_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  youbot.srdf
youbot_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  youbot_moveit_controller_manager.launch.xml
(+9 files in other folders)
