<?xml version="1.0"?>
<package>
  <name>youbot_arm_kinematics_moveit</name>
  <version>0.1.0</version>
  <description>
    A MoveIt! plugin for forward and inverse kinematics of the youBot's arm.
  </description>
  <license>GPLv3</license>

  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <author email="sven.schneider@h-brs.de">Sven Schneider</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>youbot_arm_kinematics</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>youbot_arm_kinematics</run_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <moveit_core plugin="${prefix}/plugins.xml"/>
  </export>
</package>